--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
   <title>Singolo</title>
 </head>
 
@@ -12,7 +14,7 @@
     <div class="wrapper">
       <h1 class="title">singolo<span>*</span></h1>
       <nav class="navigation">
-        <a href="" class="navigation__item">HOME</a>
+        <a href="" class="navigation__item navigation__item_active">HOME</a>
         <span class="navigation__item">·</span>
         <a href="" class="navigation__item">SERVICES</a>
         <span class="navigation__item">·</span>
