feat: add styles to slider

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -31,7 +31,7 @@
     <div class="wrapper">
       <div class="slider-panel">
         <button class="slide-left"></button>
-        <img class="click" src="./assets/images/sliderContent.png" alt="First slide">
+        <img class="slider-image" src="./assets/images/sliderContent.png" alt="First slide">
         <button class="slide-right"></button>
       </div>
     </div>
