feat: add styles to portfolio

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -98,7 +98,7 @@
         <div class="description">Duis mollis, est non commodo luctus, nisi erat porttitor ligula,
           eget lacinia odio sem nec elit.</div>
         <div class="portfolio__categories">
-          <div class="portfolio__category">All</div>
+          <div class="portfolio__category portfolio__category_active">All</div>
           <div class="portfolio__category">Web Design</div>
           <div class="portfolio__category">Graphic Design</div>
           <div class="portfolio__category">Artwork</div>
