feat: add styles to about

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -134,34 +134,35 @@
         <div class="about__card">
           <div class="about__card-image">
             <img src="./assets/images/photo-1.jpg" alt="Adam Jensen">
+          </div>
             <div class="about__card-name">Adam Jensen</div>
             <div class="about__card-description">Quisque luctus, quam eget molestie commodo,
               lacus purus cursus purus, nec rutrum tellus dolor id lorem.</div>
             <div class="about__card-contacts">
-              <div class="facebook"></div>
-              <div class="google"></div>
-              <div class="twitter"></div>
-              <div class="insta"></div>
+              <div class="facebook"><img src="./assets/icons/ico-facebook.png" alt="Facebook"></div>
+              <div class="google"><img src="./assets/icons/ico-google-plus.png" alt="Google plus"></div>
+              <div class="twitter"><img src="./assets/icons/ico-twitter.png" alt="Twitter"></div>
+              <div class="linkedin"><img src="./assets/icons/ico-linkedin.png" alt="Linkedin"></div>
             </div>
-          </div>
         </div>
         <div class="about__card">
           <div class="about__card-image">
             <img src="./assets/images/photo-2.jpg" alt="Desmond Miles">
+          </div>
             <div class="about__card-name">Desmond Miles</div>
             <div class="about__card-description">Curabitur vestibulum eget mauris quis laoreet.
               Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</div>
             <div class="about__card-contacts">
-              <div class="facebook"></div>
-              <div class="google"></div>
-              <div class="twitter"></div>
-              <div class="insta"></div>
+              <div class="facebook"><img src="./assets/icons/ico-facebook.png" alt="Facebook"></div>
+              <div class="google"><img src="./assets/icons/ico-google-plus.png" alt="Google plus"></div>
+              <div class="twitter"><img src="./assets/icons/ico-twitter.png" alt="Twitter"></div>
+              <div class="linkedin"><img src="./assets/icons/ico-linkedin.png" alt="Linkedin"></div>
             </div>
-          </div>
         </div>
         <div class="about__card">
           <div class="about__card-image">
             <img src="./assets/images/photo-3.jpg" alt="Scolara Visari">
+          </div>
             <div class="about__card-name">Scolara Visari</div>
             <div class="about__card-description">Nulla sed nunc et tortor luctus faucibus.
               Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</div>
@@ -171,7 +172,6 @@
               <div class="twitter"><img src="./assets/icons/ico-twitter.png" alt="Twitter"></div>
               <div class="linkedin"><img src="./assets/icons/ico-linkedin.png" alt="Linkedin"></div>
             </div>
-          </div>
         </div>
       </div>
     </div>
