feat: add styles to contacts and footer

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -185,7 +185,6 @@
           Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
           Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</div>
       </div>
-    </div>
     <div class="contacts__form">
       <form class="form" action="#">
         <input type="text" id="name" name="name" placeholder="Name (required)">
@@ -193,7 +192,7 @@
         <input type="text" id="subject" name="subject" placeholder="Subject">
         <textarea name="describe" id="describe" cols="30" rows="10"
           placeholder="Describe your project in detail..."></textarea>
-        <input type="submit" value="Submit">
+        <input id="submit" type="submit" value="SEND">
       </form>
     </div>
     <div class="contacts__information">
@@ -203,25 +202,25 @@
         Morbi at aliquet turpis, et consequat felis.</div>
       <div class="contacts__information-contacts">
         <div class="location">
-          <img src="./assets/icons/ico-location.svg" alt="Location">
+          <div><img src="./assets/icons/ico-location.svg" alt="Location"></div>
           <span>Elm St. 14/05 Lost City</span>
         </div>
         <div class="phone">
-          <img src="./assets/icons/ico-phone.svg" alt="Phone">
+          <div><img src="./assets/icons/ico-phone.svg" alt="Phone"></div>
           <span>03528 331 86 35 </span>
         </div>
         <div class="email">
-          <img src="./assets/icons/ico-mail.svg" alt="Email">
+          <div><img src="./assets/icons/ico-mail.svg" alt="Email"></div>
           <span>info@singolo.com</span>
         </div>
       </div>
     </div>
-    </div>
+  </div>
   </section>
 
   <footer class="footer">
     <div class="wrapper">
-      <div class="footer__copyright">© Copyright 2013</div>
+      <div class="footer__copyright">© Copyright 2020</div>
       <div class="footer__contacts">
         <div class="facebook"><img src="./assets/icons/ico-facebook.png" alt="Facebook"></div>
         <div class="google"><img src="./assets/icons/ico-google-plus.png" alt="Google plus"></div>
