feat: add responsive

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -31,7 +31,9 @@
     <div class="wrapper">
       <div class="slider-panel">
         <button class="slide-left"></button>
-        <img class="slider-image" src="./assets/images/sliderContent.png" alt="First slide">
+        <div class="slider-image">
+          <img src="./assets/images/sliderContent.png" alt="First slide">
+        </div>
         <button class="slide-right"></button>
       </div>
     </div>
