feat: add remove files plugin and add some styles

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -24,6 +24,12 @@
         <span class="navigation__item">·</span>
         <a href="" class="navigation__item">CONTACT</a>
       </nav>
+      <div class="burger-menu">
+        <div class="burger-menu__button">
+          <img src="./assets/icons/burger-menu-icon.png" alt="Burger menu icon">
+        </div>
+        <div class="burger-menu__navigation"></div>
+      </div>
     </div>
   </header>
 
